// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PostView > hides the finance disclaimer for non-finance posts 1`] = `
"<div class="mx-auto max-w-180 px-8 pt-35 pb-24"><a href="/posts/" class="group text-fg-muted hover:text-accent mb-12 inline-flex items-center gap-1.5 font-mono text-[0.75rem] tracking-[0.02em] no-underline transition-colors"><svg aria-hidden="true" width="14" height="14" viewBox="0 0 14 14" fill="none" class="transition-transform group-hover:-translate-x-1">
      <path d="M9 2L4 7L9 12" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
    </svg> back to blog </a>
  <div class="mb-6 flex flex-wrap items-center gap-4"><span class="text-on-accent-dim bg-accent-dim rounded-xs px-2.5 py-1 font-mono text-[0.65rem] font-semibold tracking-[0.08em] uppercase">development</span><span class="text-fg-subtle font-mono text-[0.72rem]">January 1, 2025</span><span class="text-fg-subtle font-mono text-[0.72rem]"> · 5 min read </span></div>
  <h1 class="mb-6 font-mono leading-[1.2] font-bold" style="letter-spacing: -0.04em;">First Post</h1>
  <p class="text-fg-muted border-accent mb-8 border-l-2 pl-5 text-[1.1rem] leading-[1.7]">The first post description.</p>
  <div class="border-line mb-12 flex items-center gap-4 border-t border-b py-5">
    <div class="bg-accent-dim border-accent h-10 w-10 shrink-0 overflow-hidden rounded-full border-2"><img src="/images/photo.jpg" alt="Dan Holloran" class="h-full w-full object-cover"></div>
    <div class="flex-1">
      <div class="font-mono text-[0.8rem] font-semibold">Dan Holloran</div>
      <div class="text-fg-subtle font-mono text-[0.7rem]">Senior Frontend Developer</div>
    </div>
  </div>
  <div class="mb-12 aspect-video w-full overflow-hidden rounded bg-[#e8e6e1]">
    <responsive-image-stub src="/images/posts/first-post.jpg" variant="hero" sizes="(max-width: 767px) 100vw, 720px" class="focus-visible:outline-accent h-full w-full cursor-zoom-in focus-visible:outline-2 focus-visible:-outline-offset-3" alt="First Post" fetchpriority="high" role="button" tabindex="0" aria-haspopup="dialog" aria-label="Zoom image: First Post"></responsive-image-stub>
  </div>
  <article class="post-body text-fg text-base leading-[1.85]"></article><!-- DISCLAIMER -->
  <!--v-if-->
  <div class="border-line mt-12 flex flex-wrap gap-2 border-t pt-8"><a href="/posts/tag/javascript" class="text-fg-muted border-line tag-hover rounded-xs border px-2.5 py-1 font-mono text-[0.7rem] no-underline transition-colors"> #javascript</a></div><!-- NEWSLETTER · terminal block -->
  <newsletter-terminal-stub></newsletter-terminal-stub>
  <nav aria-label="Post navigation" class="border-line mt-16 grid grid-cols-2 gap-4 border-t pt-8 max-md:grid-cols-1"><a href="/posts/second-post" class="border-line hover:border-accent rounded border p-5 no-underline transition-colors">
      <div class="text-fg-subtle mb-1.5 font-mono text-[0.65rem] tracking-[0.08em] uppercase"> ← Previous </div>
      <div class="text-fg font-mono text-[0.85rem] leading-[1.3] font-semibold">Second Post</div>
    </a>
    <!--v-if-->
  </nav>
</div>
<post-lightbox-stub alt=""></post-lightbox-stub>
<teleport-stub to="body"></teleport-stub>"
`;

exports[`PostView > renders correctly 1`] = `
"<div class="mx-auto max-w-180 px-8 pt-35 pb-24"><a href="/posts/" class="group text-fg-muted hover:text-accent mb-12 inline-flex items-center gap-1.5 font-mono text-[0.75rem] tracking-[0.02em] no-underline transition-colors"><svg aria-hidden="true" width="14" height="14" viewBox="0 0 14 14" fill="none" class="transition-transform group-hover:-translate-x-1">
      <path d="M9 2L4 7L9 12" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
    </svg> back to blog </a>
  <div class="mb-6 flex flex-wrap items-center gap-4"><span class="text-on-accent-dim bg-accent-dim rounded-xs px-2.5 py-1 font-mono text-[0.65rem] font-semibold tracking-[0.08em] uppercase">development</span><span class="text-fg-subtle font-mono text-[0.72rem]">January 1, 2025</span><span class="text-fg-subtle font-mono text-[0.72rem]"> · 5 min read </span></div>
  <h1 class="mb-6 font-mono leading-[1.2] font-bold" style="letter-spacing: -0.04em;">First Post</h1>
  <p class="text-fg-muted border-accent mb-8 border-l-2 pl-5 text-[1.1rem] leading-[1.7]">The first post description.</p>
  <div class="border-line mb-12 flex items-center gap-4 border-t border-b py-5">
    <div class="bg-accent-dim border-accent h-10 w-10 shrink-0 overflow-hidden rounded-full border-2"><img src="/images/photo.jpg" alt="Dan Holloran" class="h-full w-full object-cover"></div>
    <div class="flex-1">
      <div class="font-mono text-[0.8rem] font-semibold">Dan Holloran</div>
      <div class="text-fg-subtle font-mono text-[0.7rem]">Senior Frontend Developer</div>
    </div>
  </div>
  <div class="mb-12 aspect-video w-full overflow-hidden rounded bg-[#e8e6e1]">
    <responsive-image-stub src="/images/posts/first-post.jpg" variant="hero" sizes="(max-width: 767px) 100vw, 720px" class="focus-visible:outline-accent h-full w-full cursor-zoom-in focus-visible:outline-2 focus-visible:-outline-offset-3" alt="First Post" fetchpriority="high" role="button" tabindex="0" aria-haspopup="dialog" aria-label="Zoom image: First Post"></responsive-image-stub>
  </div>
  <article class="post-body text-fg text-base leading-[1.85]"></article><!-- DISCLAIMER -->
  <!--v-if-->
  <div class="border-line mt-12 flex flex-wrap gap-2 border-t pt-8"><a href="/posts/tag/javascript" class="text-fg-muted border-line tag-hover rounded-xs border px-2.5 py-1 font-mono text-[0.7rem] no-underline transition-colors"> #javascript</a></div><!-- NEWSLETTER · terminal block -->
  <newsletter-terminal-stub></newsletter-terminal-stub>
  <nav aria-label="Post navigation" class="border-line mt-16 grid grid-cols-2 gap-4 border-t pt-8 max-md:grid-cols-1"><a href="/posts/second-post" class="border-line hover:border-accent rounded border p-5 no-underline transition-colors">
      <div class="text-fg-subtle mb-1.5 font-mono text-[0.65rem] tracking-[0.08em] uppercase"> ← Previous </div>
      <div class="text-fg font-mono text-[0.85rem] leading-[1.3] font-semibold">Second Post</div>
    </a>
    <!--v-if-->
  </nav>
</div>
<post-lightbox-stub alt=""></post-lightbox-stub>
<teleport-stub to="body"></teleport-stub>"
`;

exports[`PostView > renders with prev and next navigation when post is mid-list 1`] = `
"<div class="mx-auto max-w-180 px-8 pt-35 pb-24"><a href="/posts/" class="group text-fg-muted hover:text-accent mb-12 inline-flex items-center gap-1.5 font-mono text-[0.75rem] tracking-[0.02em] no-underline transition-colors"><svg aria-hidden="true" width="14" height="14" viewBox="0 0 14 14" fill="none" class="transition-transform group-hover:-translate-x-1">
      <path d="M9 2L4 7L9 12" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
    </svg> back to blog </a>
  <div class="mb-6 flex flex-wrap items-center gap-4"><span class="text-on-accent-dim bg-accent-dim rounded-xs px-2.5 py-1 font-mono text-[0.65rem] font-semibold tracking-[0.08em] uppercase">career</span><span class="text-fg-subtle font-mono text-[0.72rem]">February 1, 2025</span><span class="text-fg-subtle font-mono text-[0.72rem]"> · 3 min read </span></div>
  <h1 class="mb-6 font-mono leading-[1.2] font-bold" style="letter-spacing: -0.04em;">Second Post</h1>
  <p class="text-fg-muted border-accent mb-8 border-l-2 pl-5 text-[1.1rem] leading-[1.7]">The second post description.</p>
  <div class="border-line mb-12 flex items-center gap-4 border-t border-b py-5">
    <div class="bg-accent-dim border-accent h-10 w-10 shrink-0 overflow-hidden rounded-full border-2"><img src="/images/photo.jpg" alt="Dan Holloran" class="h-full w-full object-cover"></div>
    <div class="flex-1">
      <div class="font-mono text-[0.8rem] font-semibold">Dan Holloran</div>
      <div class="text-fg-subtle font-mono text-[0.7rem]">Senior Frontend Developer</div>
    </div>
  </div>
  <div class="mb-12 aspect-video w-full overflow-hidden rounded bg-[#e8e6e1]">
    <responsive-image-stub src="/images/posts/second-post.jpg" variant="hero" sizes="(max-width: 767px) 100vw, 720px" class="focus-visible:outline-accent h-full w-full cursor-zoom-in focus-visible:outline-2 focus-visible:-outline-offset-3" alt="Second Post" fetchpriority="high" role="button" tabindex="0" aria-haspopup="dialog" aria-label="Zoom image: Second Post"></responsive-image-stub>
  </div>
  <article class="post-body text-fg text-base leading-[1.85]"></article><!-- DISCLAIMER -->
  <!--v-if-->
  <div class="border-line mt-12 flex flex-wrap gap-2 border-t pt-8"><a href="/posts/tag/career" class="text-fg-muted border-line tag-hover rounded-xs border px-2.5 py-1 font-mono text-[0.7rem] no-underline transition-colors"> #career</a></div><!-- NEWSLETTER · terminal block -->
  <newsletter-terminal-stub></newsletter-terminal-stub>
  <nav aria-label="Post navigation" class="border-line mt-16 grid grid-cols-2 gap-4 border-t pt-8 max-md:grid-cols-1"><a href="/posts/third" class="border-line hover:border-accent rounded border p-5 no-underline transition-colors">
      <div class="text-fg-subtle mb-1.5 font-mono text-[0.65rem] tracking-[0.08em] uppercase"> ← Previous </div>
      <div class="text-fg font-mono text-[0.85rem] leading-[1.3] font-semibold">Third Post</div>
    </a><a href="/posts/first-post" class="border-line hover:border-accent rounded border p-5 text-right no-underline transition-colors">
      <div class="text-fg-subtle mb-1.5 font-mono text-[0.65rem] tracking-[0.08em] uppercase"> Next → </div>
      <div class="text-fg font-mono text-[0.85rem] leading-[1.3] font-semibold">First Post</div>
    </a></nav>
</div>
<post-lightbox-stub alt=""></post-lightbox-stub>
<teleport-stub to="body"></teleport-stub>"
`;

exports[`PostView > shows the finance disclaimer for finance posts 1`] = `
"<div class="mx-auto max-w-180 px-8 pt-35 pb-24"><a href="/posts/" class="group text-fg-muted hover:text-accent mb-12 inline-flex items-center gap-1.5 font-mono text-[0.75rem] tracking-[0.02em] no-underline transition-colors"><svg aria-hidden="true" width="14" height="14" viewBox="0 0 14 14" fill="none" class="transition-transform group-hover:-translate-x-1">
      <path d="M9 2L4 7L9 12" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
    </svg> back to blog </a>
  <div class="mb-6 flex flex-wrap items-center gap-4"><span class="text-on-accent-dim bg-accent-dim rounded-xs px-2.5 py-1 font-mono text-[0.65rem] font-semibold tracking-[0.08em] uppercase">finance</span><span class="text-fg-subtle font-mono text-[0.72rem]">January 1, 2025</span><span class="text-fg-subtle font-mono text-[0.72rem]"> · 5 min read </span></div>
  <h1 class="mb-6 font-mono leading-[1.2] font-bold" style="letter-spacing: -0.04em;">First Post</h1>
  <p class="text-fg-muted border-accent mb-8 border-l-2 pl-5 text-[1.1rem] leading-[1.7]">The first post description.</p>
  <div class="border-line mb-12 flex items-center gap-4 border-t border-b py-5">
    <div class="bg-accent-dim border-accent h-10 w-10 shrink-0 overflow-hidden rounded-full border-2"><img src="/images/photo.jpg" alt="Dan Holloran" class="h-full w-full object-cover"></div>
    <div class="flex-1">
      <div class="font-mono text-[0.8rem] font-semibold">Dan Holloran</div>
      <div class="text-fg-subtle font-mono text-[0.7rem]">Senior Frontend Developer</div>
    </div>
  </div>
  <div class="mb-12 aspect-video w-full overflow-hidden rounded bg-[#e8e6e1]">
    <responsive-image-stub src="/images/posts/first-post.jpg" variant="hero" sizes="(max-width: 767px) 100vw, 720px" class="focus-visible:outline-accent h-full w-full cursor-zoom-in focus-visible:outline-2 focus-visible:-outline-offset-3" alt="First Post" fetchpriority="high" role="button" tabindex="0" aria-haspopup="dialog" aria-label="Zoom image: First Post"></responsive-image-stub>
  </div>
  <article class="post-body text-fg text-base leading-[1.85]"></article><!-- DISCLAIMER -->
  <aside class="border-line mt-14 flex gap-3.5 rounded border p-5" role="note" aria-label="Disclaimer" data-om-id="fef10f19:123"><svg width="18" height="18" viewBox="0 0 18 18" fill="none" stroke="currentColor" stroke-width="1.5" class="text-fg-subtle mt-0.5 shrink-0" aria-hidden="true" data-om-id="fef10f19:124">
      <circle cx="9" cy="9" r="7.25" data-om-id="fef10f19:125"></circle>
      <path d="M9 5.5v4.5" stroke-linecap="round" data-om-id="fef10f19:126"></path>
      <circle cx="9" cy="12.6" r="0.55" fill="currentColor" stroke="none" data-om-id="fef10f19:127"></circle>
    </svg>
    <p class="text-fg-muted m-0 font-mono text-[0.72rem] leading-[1.7]" data-om-id="fef10f19:128"><strong class="font-semibold" data-om-id="fef10f19:129">Disclaimer:</strong> This post is for educational and informational purposes only and is not financial, investment, or tax advice. Do your own research and consider consulting a licensed professional before making financial decisions. </p>
  </aside>
  <div class="border-line mt-12 flex flex-wrap gap-2 border-t pt-8"><a href="/posts/tag/javascript" class="text-fg-muted border-line tag-hover rounded-xs border px-2.5 py-1 font-mono text-[0.7rem] no-underline transition-colors"> #javascript</a></div><!-- NEWSLETTER · terminal block -->
  <newsletter-terminal-stub></newsletter-terminal-stub>
  <nav aria-label="Post navigation" class="border-line mt-16 grid grid-cols-2 gap-4 border-t pt-8 max-md:grid-cols-1">
    <div></div>
    <!--v-if-->
  </nav>
</div>
<post-lightbox-stub alt=""></post-lightbox-stub>
<teleport-stub to="body"></teleport-stub>"
`;
